--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -67,3 +67,60 @@ button:hover {
     text-align: center;
     width: 70%;
   }
+
+  .postpagecontainer {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .user-info {
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
+  }
+  
+  .buttons-container {
+    margin-bottom: 20px;
+  }
+  
+  .buttons-container button {
+    padding: 10px 20px;
+    margin-right: 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .buttons-container button:hover {
+    background-color: #3b863f;
+  }
+  .posts-container .post {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .posts-container .post h3 {
+    margin-bottom: 10px;
+    font-size: 20px;
+  }
+  
+  .posts-container .post p {
+    font-size: 16px;
+  }
+  
+  .post h3{
+    background-color: rgb(192, 192, 192);
+  }
+
+  .user-info div{
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .header{
+    display: flex;
+    justify-content: space-between;
+  }
